# OFIQ-Project

./: .gitignore  ACKNOWLEDGEMENT.md  CHANGELOG.md  CMakeLists.txt  Version.txt
python/: README.md  ofiq_python.md  pyproject.toml
python/ofiq/: __init__.py  ofiq_capi.py
python/service/client/: README.md  app.py  requirements.txt  setup.py
python/service/client/docs/: AnalysisRequestData.md  AnalysisResponseData.md  BoundingBox.md  DefaultApi.md  FaceImageAnalysisResult.md  Image.md  Landmarks.md  Point.md  QualityAssessmentResult.md  QualityAssessmentResults.md  ScalarQualityAnalysisResult.md  ScalarQualityResponseData.md  VectorQualityAnalysisResult.md  VectorQualityResponseData.md
python/service/client/ofiq_client/: __init__.py  api_client.py  configuration.py  rest.py
python/service/client/ofiq_client/api/: __init__.py  default_api.py
python/service/client/ofiq_client/models/: __init__.py  analysis_request_data.py  analysis_response_data.py  bounding_box.py  face_image_analysis_result.py  image.py  landmarks.py  point.py  quality_assessment_result.py  quality_assessment_results.py  scalar_quality_analysis_result.py  scalar_quality_response_data.py  vector_quality_analysis_result.py  vector_quality_response_data.py
python/service/server/: README.md  ofiq_api_server.py  ofiq_server_config.yaml  requirements.txt  setup.py
python/service/server/ofiq_server/: __init__.py  __main__.py  app_creator.py  encoder.py  ofiq_api.py  util.py
python/service/server/ofiq_server/controllers/: default_controller copy.py  default_controller.py
python/test/: test.py
(+40 files in other folders)
