[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ofiq"
version = "1.2.0"
description = "The OFIQ (Open Source Face Image Quality) is a software library for computing quality aspects of a facial image."
authors = [{ name = "OFIQ development team" }]
requires-python = ">=3.9"
dependencies = [
    "opencv-python >=4.5.5, <5",
    "numpy >= 1.22.4, <2.0.0",
]

[tool.setuptools]
packages = ["ofiq"]
include-package-data = true

[tool.setuptools.package-data]
ofiq =  ["*.pyd", "*.dll", "*.so", "*.so.*", "*.dylib"]
